sema/testdata/gcc-c90-as-c99/reject/c90-hexfloat-1.c
double d = 0x1.2p2;

double d1 = 0x1p2;

double d2 = 0x1...p2;
